fixed navbar display logic with new_mood_path and root_path.  Vertical aligned checkboxes for mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,13 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.checkbox label {
-  width: 100%;
-}
+@media(min-width: 480px) {
+  .checkbox label {
+    width: 100%;
+  }
 
-.boolean {
-  display: inline-block;
-  width: 20%;
+  .boolean {
+    display: inline-block;
+    width: 20%;
+  }
 }
